--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,22 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# Eclipse
+.factorypath
+.classpath
+.project
+.apt_generated
+.settings/
+
+# IntelliJ IDEA
+.idea
+*.iws
+*.iml
+*.ipr
+
+# MAC OS
+.DS_Store
+
+# Generated artifacts
+target
