--- a/endava-tmd-2022-customer-service-app/src/main/resources/application.yaml
+++ b/endava-tmd-2022-customer-service-app/src/main/resources/application.yaml
@@ -28,6 +28,11 @@ logging:
     root: ${ROOT_LOGGING_LEVEL:INFO}
     com.endava: ${ENDAVA_LOGGING_LEVEL:DEBUG}
     org.springframework.web.filter.CommonsRequestLoggingFilter: DEBUG
+    org.zalando.logbook: TRACE
   pattern:
     dateformat: yyyy-MM-dd HH:mm:ss.SSS
     console: "%d [%-16thread] %-5level  %logger{36} - %msg%n"
+
+logbook:
+  exclude:
+    - ${server.servlet.context-path}/actuator/health
