--- a/endava-tmd-2022-customer-service-app/pom.xml
+++ b/endava-tmd-2022-customer-service-app/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.6.6</version>
+        <version>2.6.7</version>
         <relativePath /> <!-- lookup parent from repository -->
     </parent>
 
@@ -17,6 +17,18 @@
         <java.version>17</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>2021.0.2</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
     <dependencies>
         <!-- Our dependencies -->
@@ -34,6 +46,16 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency><!-- See https://spring.io/projects/spring-cloud-sleuth -->
+            <!-- https://docs.spring.io/spring-cloud-sleuth/docs/current-SNAPSHOT/reference/html/index.html -->
+            <!-- Live coding example: https://youtu.be/gPKJkY2t7Pc -->
+            <!-- An alternative to Sleuth could be Jaeger: -->
+            <!-- https://github.com/opentracing-contrib/java-spring-jaeger -->
+            <!-- https://reflectoring.io/spring-boot-tracing/ -->
+            <!-- Live coding example: https://youtu.be/lJ_XAol-OKM -->
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-sleuth</artifactId>
         </dependency>
         <dependency><!--See https://github.com/zalando/logbook#spring-boot-starter -->
             <groupId>org.zalando</groupId>
