Add more debug info in the response payload

--- a/endava-tmd-2022-customer-service-app/pom.xml
+++ b/endava-tmd-2022-customer-service-app/pom.xml
@@ -109,6 +109,13 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <executions>
+                    <execution><!-- https://stackoverflow.com/a/58081353/2032694 -->
+                        <goals>
+                            <goal>build-info</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
