--- a/endava-tmd-2022-customer-service-app/src/test/resources/application-it.yaml
+++ b/endava-tmd-2022-customer-service-app/src/test/resources/application-it.yaml
@@ -7,3 +7,12 @@ logging:
     root: info
     com.endava: debug
 #  file.path: ${user.home}
+
+application:
+  name: myApp
+  description: The implementation of myApp
+  license: myLicense
+  license-url: https://myCompany.com/license
+  contact-name: myCompany
+  contact-url: https://www.myCompany.com
+  contact-mail: developer@myCompany.com
