--- a/endava-tmd-2022-customer-service-swg/pom.xml
+++ b/endava-tmd-2022-customer-service-swg/pom.xml
@@ -26,6 +26,11 @@
     <dependencies>
         <!-- Compile dependencies -->
         <dependency>
+            <groupId>io.swagger.core.v3</groupId>
+            <artifactId>swagger-core</artifactId>
+            <version>2.2.0</version>
+        </dependency>
+        <dependency>
             <groupId>org.hibernate.validator</groupId>
             <artifactId>hibernate-validator</artifactId>
         </dependency>
