--- a/endava-tmd-2022-customer-service-app/pom.xml
+++ b/endava-tmd-2022-customer-service-app/pom.xml
@@ -40,6 +40,11 @@
 
         <!-- Other compile dependencies -->
         <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-ui</artifactId>
+            <version>1.6.8</version>
+       </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-configuration-processor</artifactId>
             <optional>true</optional>
