Swagger is not the only way to document an API

--- a/endava-tmd-2022-customer-service-app/src/main/resources/application.yaml
+++ b/endava-tmd-2022-customer-service-app/src/main/resources/application.yaml
@@ -35,6 +35,8 @@ logging:
 logbook:
   exclude:
     - ${server.servlet.context-path}/actuator/health
+    - ${server.servlet.context-path}/swagger-ui/*
+    - ${server.servlet.context-path}/v3/api-docs/*
 
 application:
   name: ${spring.application.name}
