introduce internal model and converters based on dozer

--- a/endava-tmd-2022-customer-service-app/pom.xml
+++ b/endava-tmd-2022-customer-service-app/pom.xml
@@ -40,6 +40,11 @@
 
         <!-- Other compile dependencies -->
         <dependency>
+            <groupId>com.github.dozermapper</groupId>
+            <artifactId>dozer-spring-boot-starter</artifactId>
+            <version>6.5.2</version>
+        </dependency>
+        <dependency>
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-ui</artifactId>
             <version>1.6.8</version>
