--- a/endava-tmd-2022-customer-service-app/src/main/resources/application.yaml
+++ b/endava-tmd-2022-customer-service-app/src/main/resources/application.yaml
@@ -6,6 +6,27 @@ spring:
   profiles:
     active:
     - ${ENV:local}
+  datasource:
+    url: jdbc:postgresql://${DB_HOST}
+    username: ${DB_USER_NAME}
+    password: ${DB_USER_PASSWORD}
+  jpa:
+    hibernate:
+      ddl-auto: none
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQL94Dialect
+        jdbc.time_zone: UTC
+  liquibase:
+    change-log: classpath:db/liquibase-master-changelog.xml
+    url: ${spring.datasource.url}
+    user: ${DB_OWNER_NAME}
+    password: ${DB_OWNER_PASSWORD}
+    parameters:
+      type.date_time: timestamp
+      default_date: now()
+      owner_name: ${spring.liquibase.user}
+      user_name: ${spring.datasource.username}
 
 server:
   port: ${APP_PORT:9010}
