--- a/endava-tmd-2022-customer-service-app/src/test/resources/application-it.yaml
+++ b/endava-tmd-2022-customer-service-app/src/test/resources/application-it.yaml
@@ -38,3 +38,11 @@ application:
   contact-name: myCompany
   contact-url: https://www.myCompany.com
   contact-mail: developer@myCompany.com
+
+customer:
+  client:
+    comms-service:
+      host: http://localhost:${wiremock.server.port:8080}
+      basic-authentication:
+        username: testUser
+        password: testPass
